[KGO-3987] fix youtube iframe hiding on Safari 5.1

--- a/site/Harvard-Tour/app/modules/tour/css/compliant.css
+++ b/site/Harvard-Tour/app/modules/tour/css/compliant.css
@@ -212,6 +212,7 @@ p, dl, ul {
   position: relative;
 }
 #tabbodies .tabbody {
+  opacity: 0;
   visibility: hidden;
   position: absolute;
   top: 0;
@@ -221,6 +222,7 @@ p, dl, ul {
   overflow: hidden;
 }
 #tabbodies .tabbody.active {
+  opacity: 1;
   z-index: 10000;
   visibility: visible;
   position: relative;
